--- a/DynamicDashboardD3/package.json
+++ b/DynamicDashboardD3/package.json
@@ -9,7 +9,8 @@
     "test": "karma start ./karma.conf.js",
     "lint": "ng lint",
     "e2e": "protractor ./protractor.conf.js",
-    "pree2e": "webdriver-manager update --standalone false --gecko false --quiet"
+    "pree2e": "webdriver-manager update --standalone false --gecko false --quiet",
+    "bundle-report": "webpack-bundle-analyzer dist/stats.json"
   },
   "private": true,
   "dependencies": {
@@ -26,6 +27,7 @@
     "@types/jquery": "^3.2.5",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
+    "packery": "^2.1.1",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
@@ -67,6 +69,7 @@
     "typescript": "~2.3.3",
     "url-loader": "^0.5.7",
     "webpack": "~2.4.0",
+    "webpack-bundle-analyzer": "^2.8.2",
     "webpack-dev-server": "~2.4.5"
   }
 }
