--- a/DynamicDashboardD3/package.json
+++ b/DynamicDashboardD3/package.json
@@ -27,6 +27,7 @@
     "@types/jquery": "^3.2.5",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
+    "draggabilly": "^2.1.1",
     "packery": "^2.1.1",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
