--- a/DynamicDashboardD3/package.json
+++ b/DynamicDashboardD3/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "webpack-dev-server --host=192.168.1.124 --port=4200",
+    "start": "webpack-dev-server --port=4200",
     "build": "webpack",
     "test": "karma start ./karma.conf.js",
     "lint": "ng lint",
